Added new visual dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,16 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+        <dependency>
+            <groupId>org.jmetrix</groupId>
+            <artifactId>jmetrix</artifactId>
+            <version>0.9.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jfxtras</groupId>
+            <artifactId>jmetro</artifactId>
+            <version>11.6.15</version>
+        </dependency>
     </dependencies>
 
     <build>
